# whisper-dictation

./: .gitignore  README.md  justfile  ndw-pause.sh  ndw-status.sh  ndw.sh  pyproject.toml  whisper_dictation.py  whisper_service.py  whisper_test.py
