[project]
name = "whisper-dictation"
version = "0.1.0"
description = "High-accuracy Czech dictation using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
ndw = "whisper_dictation:main"
ndw-service = "whisper_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv.sources]
